# rust_regex

./: Cargo.toml  README.rst  pyproject.toml
.github/workflows/: CI.yml  Lint.yml
src/: lib.rs
