[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "rust_regex"
description = "Python bindings for the Rust regex crate"
readme = "README.rst"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { email = "lbpgaming27@gmail.com" },
    { name = "MiguelX413" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
GitHub = "https://github.com/MiguelX413/rust_regex"
GitLab = "https://gitlab.com/MiguelX413/rust_regex"
